## Process this file with automake to produce Makefile.in

SUBDIRS = images

docdir = $(datadir)/doc
pkgdocdir = $(docdir)/@PACKAGE@
pkgdochtmldir = $(pkgdocdir)/doc

pkgdochtml_DATA = autoconf.htm contributors.htm copying.txt dsssl2.htm \
	index.htm mif.htm rtf.htm tex.htm transform.htm xmlfo.htm

EXTRA_DIST = autoconf.htm contributors.htm copying.txt dsssl2.htm \
	index.htm mif.htm rtf.htm tex.htm transform.htm xmlfo.htm

MAINTAINERCLEANFILES = Makefile.in
