## Process this file with automake to produce Makefile.in

docdir = $(datadir)/doc
pkgdocdir = $(docdir)/@PACKAGE@
imagedir = $(pkgdocdir)/images

EXTRA_DIST = background.gif dsssltitle.gif space.gif top-of-page.gif

image_DATA = background.gif dsssltitle.gif space.gif top-of-page.gif

MAINTAINERCLEANFILES = Makefile.in
